<resources>
    <string name="app_name">4IN Shield</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="child_first_name">Child first name</string>
    <string name="danger_level">Danger Level</string>
    <string name="high">High</string>
    <string name="please_add_your_child_s_devices">Please add your child’s devices</string>
    <string name="the_information_from_your_child">The information from your child’s device will help us to assess their mental health, duration of sleep, places visited, used applications etc. It also gives you the ability to block or allow installed applications</string>
    <string name="please_follow_the_following_steps">Please follow the following steps: Bring your child’s mobile phone Scan this QR code with your child’s device camera You will be redirected to the 4IN shield application download page Once the application is installed, click Next</string>
    <string name="skip">Skip</string>
    <string name="enter_required_information">Please enter the required information to complete your child’s profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="enter_your_child_social_media_account">Please enter your child’s social media account information</string>
    <string name="this_information_will_help_us">This information will help us to protect your child from online abusive content and cyberharassment</string>
    <string name="social_network_platform">Social network platform (Drop down)</string>
    <string name="social_network_user_name">Social network user name</string>
    <string name="social_network_page_url">Social network page URL</string>
    <string name="last_alerts">Last Alerts</string>
    <string name="welcome_to_4in_shield">Welcome to 4In Shield!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="no_account_sign_up"><u>No account? Sign up</u></string>
    <string name="congratulation">Congratulation!</string>
    <string name="you_have_successfully_completed_you_child_profile">You have successfully completed you child profile.</string>
    <string name="continue_str">Continue</string>
    <string name="add_another_child">Add another child</string>
    <string name="who_is_going">Who is going to use this device?</string>
    <string name="age">Age</string>
    <string name="first_name_last_name">First name Last name</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="thank_you">Thank you for your confidence in us.</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="i_herby_accept_terms_and_conditions">I herby accept terms and conditions</string>
    <string name="sign_up">Sign up</string>
    <string name="child_s_profile_successfully_added">Your child’s profile information has been successfully added</string>
    <string name="add_new_profile">Add new profile</string>
    <string name="modify_profile_information">Modify profile information</string>
    <string name="mental_state">Mental State</string>
    <string name="last_social_media_activites">Last social media activites</string>
    <string name="welcom_to_4in_shield">Welcom to 4IN Shield</string>
    <string name="start">Start</string>
    <string name="toxic_comment">Toxic comment!</string>
    <string name="mama_always_said">Mama always said life was like a box of chocolates. You never know what…</string>
    <string name="rebecca_morgan">Rebecca Morgan</string>
    <string name="_12_34_pm">12:34 PM</string>
    <string name="sign_in_with_email">Sign in with Email</string>
</resources>