<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="54dp"
    android:paddingTop="30dp"
    tools:background="@color/blue"
    tools:context=".ui.auth.AddSocialMediaAccountFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/social_media_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_child_social_media_account"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/this_information_will_help_us"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/social_network_platform_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/method_bg"
        android:hint="@string/social_network_platform"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_label" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/social_network_user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/method_bg"
        android:hint="@string/social_network_user_name"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_network_platform_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/social_network_page_UR_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/method_bg"
        android:hint="@string/social_network_page_url"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_network_user_name_edit_text" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_network_page_UR_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/next"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/skip_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/skip_btn"
        app:layout_constraintTop_toTopOf="@id/skip_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>