<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="54dp"
    android:paddingTop="30dp"
    tools:background="@color/blue"
    tools:context=".ui.auth.AddChildInformationFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/social_media_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_required_information"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/method_bg"
        android:hint="@string/first_name"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/method_bg"
        android:hint="@string/last_name"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/gender_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/method_bg"
        android:hint="@string/gender"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/birthday_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/method_bg"
        android:hint="@string/birth_date"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_edit_text" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:text="Skip"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/next"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:drawableEndCompat="@drawable/forward_arrow"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/skip_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/skip_btn"
        app:layout_constraintTop_toTopOf="@id/skip_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>