<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="44dp"
    tools:background="@color/blue"
    tools:context=".ui.auth.SocialAccountSuccessfullyAddedFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_s_profile_successfully_added"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/social_media_icon_succ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/social_media_icon_succ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/new_profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:srcCompat="@drawable/social_media_icon_succ" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/add_new_profile"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/continue_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_media_icon_succ" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/continue_str"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/forward_arrow"
        app:layout_constraintBottom_toBottomOf="@id/new_profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_profile_btn"
        app:layout_constraintTop_toTopOf="@id/new_profile_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify_profile_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/modify_profile_information"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_profile_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>